--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483177.md#1" title="美国对中产阶级最好和最糟的十个州""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-51599832-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486715.md#1">天生“半颗心”小歌手10岁了 作词鼓励病友</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1">亨特电邮门持续发酵 拜登一直未回应</a><br>
-:clock8: <em>38分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a><br>
-:clock8: <em>47分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487085.md#1">NASA斥资在月球建4G网络 诺基亚接单</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487124.md#1">美密歇根州长电视上露面 被指鼓励暗杀川普</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1">广州法轮功学员刘金焕被构陷到法院</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485617.md#1">纽约滑雪场11月6日起有限开放</a><br>
+:clock8: <em>8分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487176.md#1">孙俪爆邓超糗事 测血糖被机器扎针痛到快骂人</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487232.md#1">研究：中国猪只出现新病毒 未来恐传染给人</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486715.md#1">天生“半颗心”小歌手10岁了 作词鼓励病友</a><br>
+:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1">亨特电邮门持续发酵 拜登一直未回应</a><br>
+:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487211.md#1">【大选观察】拜登的烫手山芋：扩充最高法院</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,851,325 人
+!共 365,851,612 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -56,6 +56,7 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485506.md#1">【翻墙必看】拜登邮件门牵出另一民主党大佬</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486447.md#1">湖北省长王晓东“隐身” 传中风住院</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485685.md#1">中共部署东风-17 苏贞昌：威胁区域平和</a><br>
+<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487176.md#1">孙俪爆邓超糗事 测血糖被机器扎针痛到快骂人</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487059.md#1">【有冇搞错】一带一路遭毛思想打击</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485912.md#1">“原创”的反义词是啥？ 学生作业调侃“中国”</a><br>
@@ -103,9 +104,8 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12475395.md#1">电邮泄漏：拜登子牵线 乌克兰高管结识拜登</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474176.md#1">【十字路口】深圳掏空香港？台谍密布有诡</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/14/n12474500.md#1">深圳特区大会 习近平讲话4次咳嗽且3次停顿</a><br>
-<a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12473548.md#1">【一线采访】粤民众游青岛 返家遭强制隔离</a><br>
 <br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/oqzulz329/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/11-13-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1">广州法轮功学员刘金焕被构陷到法院</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486982.md#1">基督被缩写成JD 宗教信仰被迫“跟党走”</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486682.md#1">异议诗人王藏谴责警方无信 要求释放病妻</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484566.md#1">【大时代华人】一家挺川反共的纽约教会</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/09/1109210127212431_1-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1">三菱缩减大陆业务 11月关闭一合肥工厂</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485980.md#1">大陆第三季度GDP增长4.9% 逊于预期</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486008.md#1">钟南山称板蓝根可治新冠病毒 中共官媒曾辟谣</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环缺动力</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/09/biden-1-700x420-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1">亨特电邮门持续发酵 拜登一直未回应</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486183.md#1">中共外交人员打人却反咬一口 网民骂“耍流氓”</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485923.md#1">传新华社人事变动 总编辑何平接任社长</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485937.md#1">台百岁人瑞：若中共打来 他拿拐杖跟阿共仔拼</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485592.md#1">上任半年 中共国税总局稽查副局长林枫被查</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485812.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/1-21-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485812.md#1">【视频】广州花都区狮岭镇一工厂发生大火</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485488.md#1">【视频】四川洪雅县路基塌陷 现巨大坑洞</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12482472.md#1">【拍案惊奇】拜登家族通共？习为何突然回京</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486839.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/52eab14ca71ff0e584d3181f5e605630-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486839.md#1">央企人员在刚果捕杀穿山甲 血淋淋视频引众怒</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/09cbef2f7274654de9100c0e0db09eee-e1602954510803-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/11-13-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486851.md#1">广州法轮功学员刘金焕被构陷到法院</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486982.md#1">基督被缩写成JD 宗教信仰被迫“跟党走”</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486682.md#1">异议诗人王藏谴责警方无信 要求释放病妻</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484566.md#1">【大时代华人】一家挺川反共的纽约教会</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484176.md#1">非法停发养老金 法轮功学员秦月玲被逼离家</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483233.md#1">长年遭迫害 吉林法轮功学员孙群英含冤离世</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/09/1109210127212431_1-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486944.md#1">三菱缩减大陆业务 11月关闭一合肥工厂</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485980.md#1">大陆第三季度GDP增长4.9% 逊于预期</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486008.md#1">钟南山称板蓝根可治新冠病毒 中共官媒曾辟谣</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485268.md#1">大陆居民消费率仅38.8% 内循环缺动力</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485038.md#1">新能源车垫砖头空跑 这家中共国企曾被指骗补</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484970.md#1">剑指中国产品 印度警告两大电商违反规定</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/09/biden-1-700x420-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1">亨特电邮门持续发酵 拜登一直未回应</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486183.md#1">中共外交人员打人却反咬一口 网民骂“耍流氓”</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485923.md#1">传新华社人事变动 总编辑何平接任社长</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485937.md#1">台百岁人瑞：若中共打来 他拿拐杖跟阿共仔拼</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485592.md#1">上任半年 中共国税总局稽查副局长林枫被查</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484723.md#1">赵紫阳诞辰101周年 家属祭拜被监视</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487232.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487232.md#1">研究：中国猪只出现新病毒 未来恐传染给人</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485812.md#1">【视频】广州花都区狮岭镇一工厂发生大火</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485488.md#1">【视频】四川洪雅县路基塌陷 现巨大坑洞</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484378.md#1">【视频】20年罕见 江苏常熟成群毛蟹爬上岸</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484051.md#1">【视频】武昌天然气泄漏起火 旁边是加油站</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483388.md#1">药品回扣泛滥 大陆医疗暴利惊人</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486839.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/52eab14ca71ff0e584d3181f5e605630-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486839.md#1">央企人员在刚果捕杀穿山甲 血淋淋视频引众怒</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484047.md#1">南京三名城管当街暴打男子 围观群众怒斥</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483966.md#1">为买新款手机 浙江女子卖卵致肚胀如孕妇</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483901.md#1">陕西男子翻修房屋 发现榻榻米内塞满建筑垃圾</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483487.md#1">辽宁小学69人疑食物中毒 学生吃两天前饭菜</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/16/n12481229.md#1">钟南山又“带货”白云山A股涨停 网络炮轰</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/09cbef2f7274654de9100c0e0db09eee-e1602954510803-320x200.jpg"></a><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483265.md#1">中共高调反美 京沪托福考位名额5分钟抢光</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12472161.md#1">山西运城一中学39名学生食物中毒</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/13/n12471974.md#1">青岛中国海洋大学因化粪池事件登微博热搜</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/8/n12462789.md#1">出怪招帮邓紫棋打歌 邓超请网友用孤独造句</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/5/n12453374.md#1">河南大学文学院教授被指性骚扰女学生</a><br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/3/n12450112.md#1">中共官媒又鼓吹被联合国删除的习语录</a><br><br><p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/12/n12471193.md#1">【独家】驻华使领馆被中共视为敌对势力</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/6/n12458129.md#1">【独家】文件曝中共一带一路输出过剩产能</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/10/n12465951.md#1">【独家】密件泄中共预测秋冬疫情爆发情形</a><br>
