--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/17/n12483177.md#1" title="美国对中产阶级最好和最糟的十个州""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/07/GettyImages-51599832-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12485086.md#1" title="朱利安尼：拜登儿子抱怨 钱财与老爹分半""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-76111059-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/oqzulz329/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://oqzulz329.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487311.md#1">染疫康复 第一夫人本周将重返竞选活动现场</a><br>
-:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485617.md#1">纽约滑雪场11月6日起有限开放</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487176.md#1">孙俪爆邓超糗事 测血糖被机器扎针痛到快骂人</a><br>
-:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487232.md#1">研究：中国猪只出现新病毒 未来恐传染给人</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487273.md#1">拜登电邮门  朱利安尼：后续还有更多爆料</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487311.md#1">染疫康复 第一夫人本周将重返竞选活动现场</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12485617.md#1">纽约滑雪场11月6日起有限开放</a><br>
+:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487176.md#1">孙俪爆邓超糗事 测血糖被机器扎针痛到快骂人</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487232.md#1">研究：中国猪只出现新病毒 未来恐传染给人</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12486715.md#1">天生“半颗心”小歌手10岁了 作词鼓励病友</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/19/n12487305.md#1">亨特电邮门持续发酵 拜登一直未回应</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12483904.md#1">【翻墙必看】习在京露面 分析：暴露诡异之处</a><br>
 <a href="https://github.com/oqzulz329/djy/blob/master/gb/20/10/18/n12484117.md#1">涉习江斗还是怕“光明”光明乳业被罚引热议</a><br>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 365,851,709 人
+!共 365,852,129 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
